// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.dbobjectimportrule.v1;

import "google/protobuf/empty.proto";
import "teleport/dbobjectimportrule/v1/dbobjectimportrule.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/dbobjectimportrule/v1;dbobjectimportrulev1";

// DatabaseObjectImportRuleService provides methods to manage Teleport DatabaseObjectImportRules
service DatabaseObjectImportRuleService {
  // GetDatabaseObjectImportRule is used to query a DatabaseObjectImportRule resource by its name.
  //
  // This will return a NotFound error if the specified DatabaseObjectImportRule does not exist.
  rpc GetDatabaseObjectImportRule(GetDatabaseObjectImportRuleRequest) returns (DatabaseObjectImportRule);

  // ListDatabaseObjectImportRules is used to query DatabaseObjectImportRules.
  //
  // Follows the pagination semantics of
  // https://cloud.google.com/apis/design/standard_methods#list.
  rpc ListDatabaseObjectImportRules(ListDatabaseObjectImportRulesRequest) returns (ListDatabaseObjectImportRulesResponse);

  // CreateDatabaseObjectImportRule is used to create a DatabaseObjectImportRule.
  //
  // This will return an error if a DatabaseObjectImportRule by that name already exists.
  rpc CreateDatabaseObjectImportRule(CreateDatabaseObjectImportRuleRequest) returns (DatabaseObjectImportRule);

  // UpdateDatabaseObjectImportRule is used to modify an existing DatabaseObjectImportRule.
  rpc UpdateDatabaseObjectImportRule(UpdateDatabaseObjectImportRuleRequest) returns (DatabaseObjectImportRule);

  // UpsertDatabaseObjectImportRule is used to create or replace an existing DatabaseObjectImportRule.
  //
  // Prefer using CreateDatabaseObjectImportRule and UpdateDatabaseObjectImportRule.
  rpc UpsertDatabaseObjectImportRule(UpsertDatabaseObjectImportRuleRequest) returns (DatabaseObjectImportRule);

  // DeleteDatabaseObjectImportRule is used to delete a specific DatabaseObjectImportRule.
  //
  // This will return a NotFound error if the specified DatabaseObjectImportRule does not exist.
  rpc DeleteDatabaseObjectImportRule(DeleteDatabaseObjectImportRuleRequest) returns (google.protobuf.Empty);
}

// The request for CreateDatabaseObjectImportRule.
message CreateDatabaseObjectImportRuleRequest {
  // The DatabaseObjectImportRule to create.
  DatabaseObjectImportRule rule = 1;
}

// The request for GetDatabaseObjectImportRule.
message GetDatabaseObjectImportRuleRequest {
  // The name of the DatabaseObjectImportRule to fetch.
  string name = 1;
}

// The request for ListDatabaseObjectImportRules.
message ListDatabaseObjectImportRulesRequest {
  // The maximum number of items to return.
  // The server may impose a different page size at its discretion.
  int32 page_size = 1;
  // The page_token is the next_page_token value returned from a previous List request, if any.
  string page_token = 2;
}

// The response for ListDatabaseObjectImportRules.
message ListDatabaseObjectImportRulesResponse {
  // The page of DatabaseObjectImportRules that matched the request.
  repeated DatabaseObjectImportRule rules = 1;
  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}

// The request for UpdateDatabaseObjectImportRule.
message UpdateDatabaseObjectImportRuleRequest {
  // The DatabaseObjectImportRule to replace.
  DatabaseObjectImportRule rule = 1;
}

// The request for UpsertDatabaseObjectImportRule.
message UpsertDatabaseObjectImportRuleRequest {
  // The DatabaseObjectImportRule to create or replace.
  DatabaseObjectImportRule rule = 1;
}

// The request for DeleteDatabaseObjectImportRule.
message DeleteDatabaseObjectImportRuleRequest {
  // The name of the DatabaseObjectImportRule to delete.
  string name = 1;
}
